[ci] Cleanup code